--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,89 @@
-/* Reset default margins and paddings */
+/* Reset some default styles */
 body,
-ul {
+html {
     margin: 0;
     padding: 0;
+    font-family: 'Raleway', sans-serif;
+    background-color: #f0f0f0;
+    /* Background color for the entire page */
 }
 
-/* Styling for the game board */
+/* Style for the game board */
 #game-board {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
-    margin: 20px auto;
-    max-width: 800px;
-}
-.category {
-    background-color: #3498db;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    font-weight: bold;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 20px;
+    padding: 20px;
+    background-color: #333;
+    /* Background color for the game board */
+    border-radius: 10px;
 }
 
-.points {
-    background-color: #e74c3c;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.points:hover {
-    background-color: #c0392b;
-}
-
-/* Styling for the question and answer section */
-#question {
-    margin: 20px auto;
-    max-width: 800px;
-    text-align: center;
-}
-
-.question-text {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.answer {
-    display: inline-block;
-    background-color: #3498db;
-    color: #fff;
+#game-board button {
+    margin: 5px;
     padding: 10px 20px;
+    background-color: #555;
+    /* Button background color */
+    color: #fff;
+    /* Button text color */
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
 }
 
-.answer:hover {
-    background-color: #2980b9;
-}
-
-/* Styling for the timer and score section */
-#timer,
-#score {
+/* Style for the question container */
+#question-container {
     text-align: center;
-    font-size: 20px;
-    margin: 10px auto;
-    max-width: 800px;
+    margin-top: 20px;
 }
 
-    
+#question {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+#answer-choices button {
+    margin: 5px;
+    padding: 10px 20px;
+    background-color: #555;
+    /* Button background color */
+    color: #fff;
+    /* Button text color */
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* Style for the timer container */
+#timer-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#timer {
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #333;
+    /* Timer background color */
+    color: #fff;
+    /* Timer text color */
+    padding: 10px;
+    border-radius: 5px;
+}
+
+/* Style for the score container */
+#score-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#score {
+    font-size: 20px;
+    background-color: #333;
+    /* Score background color */
+    color: #fff;
+    /* Score text color */
+    padding: 10px;
+    border-radius: 5px;
+}
