--- a/assets/js/style.css
+++ b/assets/js/style.css
@@ -4,10 +4,10 @@ html {
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
-    background-color: #f0f0f0;
+    background-color: #cf2323;
 }
 
-/* Style for the game game */
+/* Style for the game */
 #game-board {
     display: flex;
     flex-wrap: wrap;
