--- a/assets/js/style.css
+++ b/assets/js/style.css
@@ -3,10 +3,14 @@ body
  {
     margin: 0;
     padding: 0;
-    font-family: 'Raleway', sans-serif;
-    background-color: #cf2323;
+    font-family: 'Raleway', sans-serif; 
+   background-color: #cf2323;
 }
-
+header {
+    background-color: #333;
+    text-align: center;
+    padding: 20px 0;
+}
 /* Style for the game */
 #game-board {
     display: flex;
@@ -21,13 +25,18 @@ body
 
 #game-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: wrap;
+    justify-content: space-around ;
+    background-color: #333;
+    border-radius: 10px;
+    padding: 2%;
+    max-width: 1200px;
+    margin: 2% auto 0;
 }
 
 .category-button {
-    margin: 5px;
-    padding: 10px 20px;
+    margin: 1%;
+    padding: 2% 4%;
     background-color: #555;
     color: #fff;
     border: none;
