--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ header {
 .category-button {
     margin: 1%;
     padding: 2% 4%;
-    background-color: #555;
+    background-color: #0f0f7c;
     color: #fff;
     border: none;
     border-radius: 5px;
