--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,9 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: #333;
+    background-color: #b02323;
     border-radius: 10px;
-    padding: 2%;
+    padding: 20px;
     max-width: 1200px;
     margin: 2% auto 0;
 }
